Updated translations to match valves latest patch

--- a/translations/ro/weapons.phrases.tf.txt
+++ b/translations/ro/weapons.phrases.tf.txt
@@ -172,6 +172,10 @@
 	{
 		"ro"	"Recompensa Ta Eternă"
 	}
+	"TF_THEBATTALIONSBACKUP"
+	{
+		"ro"	"Sprijinul Batalionului"
+	}
 	"TF_THEBLACKBOX"
 	{
 		"ro"	"Cutia Neagră"
